# sdl2-template

./: .gitmodules  CMakeLists.txt  Makefile
.cache/clangd/index/: SDL.h.019EDF87990537CD.idx  SDL_assert.h.6877970C7E703953.idx  SDL_atomic.h.DAFDED88AC528E3E.idx  SDL_audio.h.C06D09FA0D36FD48.idx  SDL_blendmode.h.1E1F24E436D606C7.idx  SDL_clipboard.h.C01064A31B0BE897.idx  SDL_config.h.8F131ACCD663D6F2.idx  SDL_cpuinfo.h.9B5307F2803393EC.idx  SDL_endian.h.6DEEBA601E2DDCE7.idx  SDL_error.h.B829E6D3B99EDCB1.idx  SDL_events.h.631F15021D81482A.idx  SDL_filesystem.h.29D2A2AA494D4B8A.idx  SDL_gamecontroller.h.67A521EE0430DD83.idx  SDL_gesture.h.CC3FFFB27A52F5A4.idx  SDL_guid.h.E26A531FB669B404.idx  SDL_haptic.h.4E2A84CB20DC227E.idx  SDL_hidapi.h.4FD6D9F571B2EFFF.idx  SDL_hints.h.F76D216336FE3EAF.idx  SDL_joystick.h.2F194B2CE322597B.idx  SDL_keyboard.h.5721876B3240ACDA.idx  SDL_keycode.h.38D6C846BD07084D.idx  SDL_loadso.h.332C30961C3B9D89.idx  SDL_locale.h.718C7D6FBDE903BA.idx  SDL_log.h.F5EDE181A2987A30.idx  SDL_main.h.9C1513A3E9D14415.idx  SDL_messagebox.h.2646D95A2CA858BB.idx  SDL_metal.h.4BAEB3E4EB51359E.idx  SDL_misc.h.5C05373F945A18CF.idx  SDL_mouse.h.9EECBA22E06AB135.idx  SDL_mutex.h.6A5CE7F73CDCD6C1.idx  SDL_pixels.h.DBB6523FE0DC18A9.idx  SDL_platform.h.1AD859776F4965E8.idx  SDL_power.h.0A570F512DE808D9.idx  SDL_quit.h.F7361F5AF9566CE5.idx  SDL_rect.h.DB778E8B207EC61E.idx  SDL_render.h.91EF4A2F3E257A77.idx  SDL_rwops.h.09CB25D9A2B4828E.idx  SDL_scancode.h.356C9041D25DD460.idx  SDL_sensor.h.F6DF5929E940D26D.idx  SDL_shape.h.B33D1C8D5C93C493.idx  (+11 more)
src/: main.cpp
